edit delete task feature added

--- a/index.html
+++ b/index.html
@@ -14,18 +14,24 @@
             <input type="text" class="task-input" id="todo-input" placeholder="Add a task">
             <button class="add-task" onclick="addTask('todo')">Add task</button>
         </div>
-        <div class="column" id="todo">
+        <div class="column" id="doing">
             <h2>Doing</h2>
             <div class="tasks" id="doing-tasks"></div>
             <input type="text" class="task-input" id="doing-input" placeholder="Add a task">
             <button class="add-task" onclick="addTask('doing')">Add task</button>
         </div>
-        <div class="column" id="todo">
+        <div class="column" id="done">
             <h2>Done</h2>
             <div class="tasks" id="done-tasks"></div>
             <input type="text" class="task-input" id="done-input" placeholder="Add a task">
             <button class="add-task" onclick="addTask('done')">Add task</button>
         </div>
+    </div>
+    <div class="context-menu">
+        <ul>
+            <li onclick="editTask()">Edit</li>
+            <li onclick="deleteTask()">Delete</li>
+        </ul>
     </div>
     <script src="script.js"></script>
 </body>
